Fixes border radius issue on mobile richtext focus menu

--- a/static/less/richtext.less
+++ b/static/less/richtext.less
@@ -651,7 +651,11 @@
 }
 
 @media screen and (max-width: 768px) {
+
     .ProsemirrorEditor.focusMenu {
+        .form-control:focus {
+            border-top-right-radius: 0 !important;
+        }
         .ProseMirror-menubar {
             min-height: 1em;
             margin-top: 0;
